# Prometheus-Loop

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_TWEET.md  LICENSE  README.md  SECURITY.md  agentic-ai-loop-guide.md  agentic-ai-loop-v2-guide.md  agentic-ai-loop-v2.mermaid  agentic-ai-loop-v3-guide.md  agentic-ai-loop-v3.mermaid  agentic-ai-loop.mermaid  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.mimocode/: .cron-lock
DOCS/: README.md  api-reference.md  architecture.md  deployment-guide.md  faq.md  getting-started.md  glossary.md  index.md  migration-guide.md  performance-benchmarks.md  security-guide.md  troubleshooting.md
autonomous/: README.md  agentic-ai-loop-v3-guide.md  cost-optimization.md  evaluation-framework.md  memory-management.md  multi-agent-patterns.md  self-healing-playbook.md
core/: README.md  agentic-ai-loop-guide.md  anti-patterns.md  cheat-sheet.md  code-snippets.md  community-examples.md  comparison.md  learning-path.md  patterns.md  playground.md  quiz.md  tutorial.md
core-only/: README.md  agentic-ai-loop-core.mermaid  agentic-ai-loop-v2-core.mermaid  agentic-ai-loop-v3-core.mermaid  self-capabilities-summary.md  shared-resources-summary.md  v1-loop-example.md  v2-loop-example.md  v3-loop-example.md
examples/: README.md  code-snippets.md  coding-agent-case-study.md  content-generation-case-study.md  crewai-integration.md  customer-onboarding-case-study.md  data-pipeline-case-study.md  infrastructure-agent-case-study.md  langchain-integration.md  llamaindex-integration.md  (+3 more)
(+82 files in other folders)
